[gd_scene load_steps=5 format=3 uid="uid://c21b5u7a3bg7d"]

[ext_resource type="Script" path="res://Scenes/Entities/EnemyRanged.gd" id="1_uq0qb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t427d"]
size = Vector2(30, 70)

[sub_resource type="Gradient" id="Gradient_8kqyq"]
colors = PackedColorArray(0.894118, 0.0509804, 0, 1, 0.921569, 0.054902, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_067sh"]
gradient = SubResource("Gradient_8kqyq")

[node name="EnemyRanged" type="Area2D"]
collision_layer = 3
collision_mask = 2
script = ExtResource("1_uq0qb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t427d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture1D_067sh")
region_enabled = true
region_rect = Rect2(0, 0, 30, 70)

[node name="FrontDetect" type="RayCast2D" parent="."]
target_position = Vector2(512, 0)
collision_mask = 4

[node name="BackDetect" type="RayCast2D" parent="."]
target_position = Vector2(-256, 0)
collision_mask = 4

[node name="Floor" type="RayCast2D" parent="."]
position = Vector2(-20, 30)
target_position = Vector2(0, 10)

[node name="ShootCooldown" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
